# Boston_Price_Prediction_Flask_app

./: README.md  app.py  boston_final.ipynb  model.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: boston_final-checkpoint.ipynb
data/: test_xdata.csv  test_y_data.csv
instance/: demo.db
logs/: myapp.log.1  myapp.log.2  myapp.log.3  myapp.log.7  myapp.log.8  myapp.log.9
model/: price_prediction_rfr.joblib
templates/: index.html  login.html  predict.html  register.html
