[tool.poetry]
name = "repl_nix_BostonPricePredictionFlaskapp"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.10.3"
pandas = "^2.0.0"
scikit-learn = "^1.2.2"
Flask = "^2.2.3"
Flask-Login = "^0.6.2"
numpy = "^1.24.2"
Flask-SQLAlchemy = "^3.0.3"
joblib = "^1.2.0"
Flask-Migrate = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
